# sitemap

./: .gitignore  LICENSE  README.md  pyproject.toml
script/: setup.bash
src/sitemap/: __init__.py  abc.py  auto_sitemap_index.py  host.py  image_sitemap.py  sitemap.py  sitemap_index.py
test/: test_auto_sitemap_index.py  test_closeable.py  test_host.py
test/image_sitemap/: test_image_sitemap.py  test_image_sitemap_file.py
test/sitemap/: test_sitemap.py  test_sitemap_file.py
test/sitemap_index/: test_sitemap_index.py  test_sitemap_index_file.py
